--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,6 +18,7 @@
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
     "next": "^15.4.5",
+    "next-intl": "^3.0.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
